<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoVoz</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_forum">Forum</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_thread">Thớt</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refresh">Refresh</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="prompt_username">Tên tài khoản</string>
    <string name="title_activity_post">Trả lời</string>
    <string name="quick_reply">Reply</string>
    <string name="title_activity_auto_login">Tự động login</string>
    <string name="reply_quote">Quote</string>
    <string name="reply_multi_quote">Multi Quotes</string>
    <string name="ignore">Ignore</string>
    <string name="view_profile">View Profile</string>
    <string name="send_pm">Send PM</string>
    <string name="report">Report</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="pin_title">Pinned</string>
    <string name="preloaded_title">Preloaded</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Find People</item>
        <item>Photos</item>
        <item>Communities</item>
        <item>Pages</item>
        <item>What\'s Hot</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_setting">Cài đặt</string>
    <string name="show_image">Hiện hình</string>
    <string name="answer_title">Tựa:</string>
    <string name="answer_content">Trả lời:</string>
    <string name="answer_post">Đăng:</string>
    <string name="setting_load_by_demand">Chỉ load hình khi yêu cầu</string>
    <string name="setting_confirm_when_ignoring">Xác nhận khi Ignore</string>
    <string name="setting_application_font">Kích thước font hiển thị:</string>
    <string name="setting_theme">Theme:</string>
    <string name="setting_theme_dark">Dark</string>
    <string name="setting_light_theme">Light</string>
    <string name="setting_theme_light">Light</string>
    <string name="setting_save_config">Lưu cấu hình</string>
    <string name="setting_font_metrics">dp</string>
    <string name="select_page_goto_page">Đi đến</string>
    <string name="select_page_cancel">Bỏ qua</string>
    <string name="change_font_note">"(Chỉ tác dụng cho font chữ trong tiêu đề và bài viết) "</string>
    <string name="autoReloadForum">Tự động load lại khi nhấn Back</string>
    <string name="supportLongAvatar">Hiển thị avatar dài</string>
    <string name="title_activity_show_image">Xem hình phóng to</string>
    <string name="login_with_preset">Login with saved account</string>
    <string name="title_activity_pm">pmActivity</string>
    <string name="title_activity_pmview">Tin nhắn</string>
    <string name="title_activity_inbox">Hộp thư</string>
    <string name="dialog_cancel">BỎ QUA</string>
    <string name="dialog_ok">ĐỒNG Ý</string>
    <string name="forum_select_title">Nhập Id của Forum và nhấn OK</string>
    <string name="thread_select_title">Nhập Id của Thread rồi nhấn OK</string>
    <string name="error_forum_select_id">Xin vui lòng nhập số. Id forum là số.</string>
    <string name="error_not_login_go_forum">Bạn cần phải login vào trước mới đi đến forum này được.</string>
    <string name="error_not_login_go_inbox">Bạn cần phải login vào trước mới có thể vào hộp thư được.</string>
    <string name="err_cannot_access_forum">Không thể truy nhập vozForums. Xin vui lòng thử lại sau.</string>
    <string name="left_menu_home">Trang Chủ</string>
    <string name="left_menu_go_thread">Đi đến Thread</string>
    <string name="left_menu_go_forum">Đi đến Forum</string>
    <string name="left_menu_inbox">Hộp Thư</string>
    <string name="left_menu_search">Tìm Kiếm</string>
    <string name="left_menu_setting">Cài Đặt</string>
    <string name="left_menu_exit">Thoát GoVoz</string>
    <string name="left_menu_login">Đăng nhập</string>
    <string name="left_menu_login_with_pref">Đăng nhập bằng thông tin đã lưu</string>
    <string name="left_menu_logout">Đăng xuất</string>
    <string name="login_success">Đăng nhập thành công !</string>
    <string name="insert_avatar">Insert Icon</string>
    <string name="title_activity_create_pm">Tạo tin nhắn</string>
    <string name="to_address">Đến:</string>
    <string name="pm_content">Nội dung:</string>
    <string name="pm_title">Tựa:</string>
    <string name="title_activity_browser">Mở web browser</string>
    <string name="error_invalid_link">Link không hợp lệ</string>
    <string name="loading_link">Đang nạp trang ...</string>
    <string name="setting_show_sign">Xem chữ ký</string>
    <string name="send_pm_button">Gửi tin nhắn</string>
    <string name="ignore_one_user">TIến hành ignore</string>
    <string name="really_want_to_ignore">Bạn có muốn ignore nick </string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="embarrased"><![CDATA[:\">]]></string>
    <string name="not_implemented_yet">Tính năng này chưa được implement. Hãy đợi một thời gian.</string>
    <string name="setting_hardware_accelerated">Sử dụng tăng tốc phần cứng</string>
    <string name="use_backround_service">Download hình ảnh dùng dịch vụ nền</string>
    <string name="star">Rate</string>
    <string name="bookmark">Bookmark</string>
    <string name="really_want_to_remove_shotcut">Bạn thật sự muốn bỏ lối tắt này ?</string>
    <string name="remove_shortcut">Xoá lối tắt</string>
    <string name="agree">Đồng ý</string>
    <string name="five_star">5 sao</string>
    <string name="four_star">4 sao</string>
    <string name="three_star">3 sao</string>
    <string name="two_star">2 sao</string>
    <string name="one_star">1 sao</string>
    <string name="experimental_text">Đây là tính năng thử nghiệm, nên có thể sẽ không chạy tốt với bài có nhiều hình ảnh.</string>
    <string name="do_search">Tìm</string>
    <string name="sub_forums_tile">DIỄN ĐÀN</string>
    <string name="threads_in">CHỦ ĐỀ TRONG:</string>
    <string name="thread_title">THREAD TITLE</string>
    <string name="yourPosts">Bài viết của bạn</string>
    <string name="yourThreads">Chủ đề của bạn</string>
    <string name="left_menu_aboutus">Về GoVoz</string>
    <string name="left_menu_go_subcribe">Theo Dõi</string>
    <string name="rmenu">MENU</string>
    <string name="pm_list_title">DANH SÁCH TIN NHẮN</string>
    <string name="error_thread_select_id">Xin vui lòng nhập số. Id thread là số.</string>
    <string name="inbox_string">Hộp thư</string>
    <string name="sent_items_string">Đã gửi</string>
    <string name="quick_search">TÌM KIẾM</string>
    <string name="show_threads_seach">Show Threads</string>
    <string name="show_posts_search">Show Posts</string>
    <string name="advance_search">TÌM KIẾM NÂNG CAO</string>
    <string name="search_title">Tìm kiếm trong forums</string>
    <string name="preloadForumAndThreadText">Load trước forum và thớt để truy cập nhanh (tốn nhiều data nếu dùng 3G/4G/LTE)</string>
    <string name="rating">Rate Thread</string>
    <string name="subcribe">Subcribe</string>
    <string name="thread_closed">Thread is closed. Cannot reply.</string>
    <string name="usingVpnChangeDNS">Đổi DNS sử dụng VPN nội bộ</string>
    <string name="one_hundred_percent">100%</string>
    <string name="page_transition_effect_text">Hiệu ứng chuyển trang</string>
    <string name="post_action_quote">Quote</string>
    <string name="post_action_report">Report</string>
    <string name="post_action_copy">Copy</string>
    <string name="choose_emoticons_set">Chọn bộ Emoticons</string>
    <string name="defaultEmoticonSet">Chọn emoticons theo ý thích:</string>
    <string name="add_new_emoticons">Thêm emoticons mới</string>
    <string name="emoticon_set_name">Tên bộ emoticons</string>
    <string name="save_button">Lưu</string>
    <string name="edit_emoticons">Chỉnh sửa emoticons</string>
    <string name="unimplemented_feature">Tính năng này đang được implement  thím thông cảm chờ ít hôm.</string>
</resources>
