<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.9">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/rootSettingLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <CheckBox
                android:id="@+id/confirmIgnore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loadImageByDemand"
                android:layout_alignStart="@+id/loadImageByDemand"
                android:layout_alignLeft="@+id/loadImageByDemand"
                android:enabled="false"
                android:text="@string/setting_confirm_when_ignoring"
                android:textSize="14sp"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/confirmIgnore"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_application_font"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="14sp" />

                <SeekBar
                    android:id="@+id/fontSize"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="15"
                    android:progress="5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one_hundred_percent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/theme_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout1"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/theme_description_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/setting_theme"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="14sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/darkThemeRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:enabled="true"
                        android:text="@string/setting_theme_dark"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/lightThemeRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:enabled="true"
                        android:text="@string/setting_theme_light"
                        android:textSize="14sp" />
                </RadioGroup>

            </LinearLayout>


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout1"
                android:layout_alignStart="@+id/linearLayout1"
                android:layout_alignLeft="@+id/linearLayout1"
                android:text="@string/change_font_note" />

            <CheckBox
                android:id="@+id/supportLongAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/autoReloadForum"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="18dp"
                android:layout_marginRight="18dp"
                android:checked="true"
                android:text="@string/supportLongAvatar"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/loadImageByDemand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/linearLayout1"
                android:layout_alignParentTop="true"
                android:text="@string/setting_load_by_demand"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/chkShowSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/supportLongAvatar"
                android:checked="true"
                android:text="@string/setting_show_sign" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chkShowSign"
                android:layout_alignStart="@+id/supportLongAvatar"
                android:layout_alignLeft="@+id/supportLongAvatar"
                android:text="@string/page_transition_effect_text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14sp"
                android:visibility="invisible" />

            <CheckBox
                android:id="@+id/autoReloadForum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView4"
                android:layout_alignLeft="@+id/textView4"
                android:text="@string/autoReloadForum"
                android:textSize="14sp" />


            <GridLayout
                android:id="@+id/gridLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView5"
                android:layout_alignLeft="@+id/textView5"

                android:columnCount="7"
                android:rowCount="2">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_gravity="left|top"
                    android:layout_marginBottom="2dp"
                    android:src="@drawable/load159"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_gravity="left"
                    android:layout_marginLeft="2dp"
                    android:layout_marginBottom="2dp"
                    android:src="@drawable/load257"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_column="2"
                    android:layout_gravity="left"
                    android:layout_marginLeft="2dp"
                    android:layout_marginBottom="2dp"
                    android:src="@drawable/load278"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_column="3"
                    android:layout_gravity="left"
                    android:layout_marginLeft="2dp"
                    android:layout_marginBottom="2dp"
                    android:src="@drawable/load35"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_column="4"
                    android:layout_gravity="left"
                    android:layout_marginLeft="2dp"
                    android:layout_marginBottom="2dp"
                    android:src="@drawable/loadday1"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_column="5"
                    android:layout_marginLeft="2dp"
                    android:layout_marginBottom="2dp"
                    android:src="@drawable/load715"
                    android:visibility="gone" />

                <RadioButton
                    android:id="@+id/radio257"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:onClick="animationChoosing"
                    android:visibility="gone" />

                <RadioButton
                    android:id="@+id/radio278"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_gravity="center"
                    android:checked="false"
                    android:onClick="animationChoosing"
                    android:visibility="gone" />

                <RadioButton
                    android:id="@+id/radio35"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="3"
                    android:layout_gravity="center"
                    android:onClick="animationChoosing"
                    android:visibility="gone" />

                <RadioButton
                    android:id="@+id/radioday1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="4"
                    android:layout_gravity="center"
                    android:onClick="animationChoosing"
                    android:visibility="gone" />

                <RadioButton
                    android:id="@+id/radio715"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="5"
                    android:layout_gravity="center"
                    android:onClick="animationChoosing"
                    android:visibility="gone" />

                <RadioButton
                    android:id="@+id/radio159"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:onClick="animationChoosing"
                    android:visibility="gone" />

            </GridLayout>

            <CheckBox
                android:id="@+id/hardwareAccelerated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gridLayout1"
                android:text="@string/setting_hardware_accelerated" />

            <CheckBox
                android:id="@+id/useBackgroundService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hardwareAccelerated"
                android:text="@string/use_backround_service" />

            <TextView
                android:id="@+id/experimental"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/useBackgroundService"
                android:text="@string/experimental_text"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/preloadThings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/experimental"
                android:layout_alignStart="@+id/confirmIgnore"
                android:layout_alignLeft="@+id/confirmIgnore"
                android:text="@string/preloadForumAndThreadText" />

            <CheckBox
                android:id="@+id/usingVpn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/preloadThings"
                android:layout_alignStart="@id/confirmIgnore"
                android:layout_alignLeft="@id/confirmIgnore"
                android:text="@string/usingVpnChangeDNS" />

            <TextView
                android:id="@+id/emoticonListText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/usingVpn"
                android:layout_alignStart="@id/confirmIgnore"
                android:layout_alignLeft="@id/confirmIgnore"
                android:text="@string/defaultEmoticonSet" />

            <Spinner
                android:id="@+id/emoticonList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emoticonListText"
                android:layout_alignStart="@id/confirmIgnore"
                android:layout_alignLeft="@id/confirmIgnore"
                android:layout_marginTop="5dp" />
            <Button
                android:id="@+id/addNewEmoSetButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emoticonList"
                android:text="@string/add_new_emoticons"
                />
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/saveConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:onClick="saveConfig"
        android:text="@string/setting_save_config"
        android:textSize="16sp" />
</LinearLayout>